Configure connection booking.view -> booking.api

--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using Booking.Api.Data
 @using Booking.Api.Entities
-@inject CinemaDbContext DbContext
+@inject Booking.Api.Data.CinemaDbContext DbContext
 <form>
     <div class="form-group">
         <label for="fullName">Full Name:</label>
