--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -5,7 +5,7 @@
 @using Booking.Api.Repositories.Interfaces
 @using Microsoft.AspNetCore.Components.Forms
 @using Booking.View.Request
-@using Booking.View.DTO
+@using Booking.View.DTO.MovieTheatreDTO
 @inject BookerRequest BookerRequest
 @inject ILogger<BookerDTO> Logger
 
@@ -13,12 +13,12 @@
 
 <style>
     body {
-        margin-top: 125px;
+        margin-top: 10px;
         background-color: #f8f9fa;
     }
 
     .container {
-        margin-top: 50px;
+        margin-top: 25px;
     }
 
     .card {
@@ -49,7 +49,7 @@
         cursor: pointer;
         border-radius: 8px;
         transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
-        margin-top: 45px;
+        margin-top: 30px;
     }
 
         .custom-button:hover {
@@ -65,7 +65,12 @@
     .success-message {
         color: green;
         font-size: 20px;
-        margin-top: 20px;
+        margin-top: 10px;
+    }
+    .error-message{
+        color: red;
+        font-size: 20px;
+        margin-top: 10px;
     }
 </style>
 
@@ -73,7 +78,6 @@
 <div class="container">
     <div class="card mx-auto mt-5" style="max-width: 500px;">
         <div class="card-body">
-            <h5 class="card-title text-center">Booking Form</h5>
             <EditForm Model="@booker" OnValidSubmit="@SubmitForm" FormName="BookerDTO">
                 <div class="mb-3">
                     <label for="Name" class="form-label">Namn:</label>
@@ -99,19 +103,30 @@
                     <button type="submit" class="custom-button">Submit Booking</button>
                 </div>
             </EditForm>
-       
-            @if (!string.IsNullOrWhiteSpace(successMessage))
-            {
-                <div class="success-message">
-                    @successMessage
-                </div>
-            }
-            @if (!string.IsNullOrWhiteSpace(errorMessage))
-            {
-                <div class="error-message">
-                    @errorMessage
-                </div>
-            }
+
+
+            <div style="text-align: center; display: flex; align-items: center; flex-direction: column;">
+                @if (!string.IsNullOrWhiteSpace(successMessage))
+                {
+                    <div class="success-message">
+                        <span style="display: flex; align-items: center;">
+                            @successMessage
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z" />
+                            </svg>
+                        </span>
+                    </div>
+                }
+                @if (!string.IsNullOrWhiteSpace(errorMessage))
+                {
+                    <div class="error-message">
+                        @errorMessage
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                        </svg>
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
@@ -133,13 +148,15 @@
             if (postForm)
             {
              
-                successMessage = "Booking successful!";
+                successMessage = "Bokning slutförd";
                 errorMessage = ""; 
+
+                booker = new BookerDTO();
             }
             else
             {
                 successMessage = "";
-                errorMessage = "Booking failed. Please try again.";
+                errorMessage = "Något gick fel. Försök igen.";
             }
         }
         catch (Exception ex)
