--- a/BookerPortal.Web/Components/_Imports.razor
+++ b/BookerPortal.Web/Components/_Imports.razor
@@ -6,6 +6,5 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Booking.View
-@using Booking.Web.Components
-
+@using BookerPortal.Web
+@using BookerPortal.Web.Components
