--- a/BookerPortal.Web/Components/App.razor
+++ b/BookerPortal.Web/Components/App.razor
@@ -1,5 +1,4 @@
-﻿@using Booking.Web.Components
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="Booking.View.styles.css" />
+    <link rel="stylesheet" href="BookerPortal.Web.styles.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
