--- a/Booking.View/Components/Routes.razor
+++ b/Booking.View/Components/Routes.razor
@@ -1,4 +1,4 @@
-﻿@using Booking.View.Components.Modals;
+﻿@using Booking.Web.Components
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" />
