--- a/BookerPortal.Web/Components/Pages/Bookings.razor
+++ b/BookerPortal.Web/Components/Pages/Bookings.razor
@@ -1,7 +1,7 @@
-﻿@page "/counter"
+﻿@page "/bookings"
 @rendermode InteractiveServer
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>bookings</PageTitle>
 
 <h1>Counter</h1>
 
