--- a/BookerPortal.Web/Components/MainPage/DashBoard.razor
+++ b/BookerPortal.Web/Components/MainPage/DashBoard.razor
@@ -1,5 +1,6 @@
-﻿@page "/Dashboard"
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
+
+
 
 <style>
     .navbar {
@@ -11,18 +12,18 @@
         transition: background-color 0.3s ease;
     }
 
-        .navbar-dark .navbar-brand:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
+    .navbar-dark .navbar-brand:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 
     .navbar-dark .navbar-nav .nav-link {
         color: white;
         transition: background-color 0.3s ease;
     }
 
-        .navbar-dark .navbar-nav .nav-link:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
+    .navbar-dark .navbar-nav .nav-link:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 
     .sidebar {
         width: 200px;
@@ -42,12 +43,21 @@
         transition: background-color 0.3s ease;
     }
 
-        .nav-link:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
+    .nav-link:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .main-content {
+        margin-left: 200px;
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        background-color: red;
+        height: 100%;
+        overflow-y: auto;
+        top:0;
+    }
 </style>
-
-
 
 <div class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
@@ -109,7 +119,4 @@
     </div>
 </div>
 
-<div style="margin-left: 200px;">
-    <!-- Your main content area goes here -->
-    <!-- This margin ensures that your main content doesn't get hidden behind the sidebar -->
-</div>
+
