--- a/BookerPortal.Web/Components/Pages/Home.razor
+++ b/BookerPortal.Web/Components/Pages/Home.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<div style="display:flex; flex:1; height:100%;">
+    <h1>Första sidan på dashboarden</h1>
 
-Welcome to your new app.
+    <p>Här är första sidan och en text om någonting.</p>
+</div>
