Fixed Ui and made a clear routing based on blazor sample pages

--- a/BookerPortal.Web/Components/Pages/Home.razor
+++ b/BookerPortal.Web/Components/Pages/Home.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<div style="display:flex; flex:1; height:100%;">
-    <h1>Första sidan på dashboarden</h1>
+<h1>Hello, world!</h1>
 
-    <p>Här är första sidan och en text om någonting.</p>
-</div>
+Welcome to your new app.
