--- a/BookerPortal.Web/Components/Pages/Movie.razor
+++ b/BookerPortal.Web/Components/Pages/Movie.razor
@@ -1,7 +1,7 @@
-﻿@page "/movies"
+﻿@page "/movie"
 @attribute [StreamRendering]
 
-<PageTitle>Movies</PageTitle>
+<PageTitle>Weather</PageTitle>
 
 <h1>Weather</h1>
 
