--- a/BookerPortal.Web/Components/Layout/MainLayout.razor.css
+++ b/BookerPortal.Web/Components/Layout/MainLayout.razor.css
@@ -9,14 +9,16 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+
+    background-image: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
 
+
 .top-row {
-    background-color: #f7f7f7;
+    background-color: #000000;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
-    height: 3.5rem;
+    height: 5rem;
     display: flex;
     align-items: center;
 }
