--- a/BookerPortal.Web/Components/Pages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/Booking.razor
@@ -1,7 +1,7 @@
-﻿@page "/bookings"
+﻿@page "/booking"
 @rendermode InteractiveServer
 
-<PageTitle>bookings</PageTitle>
+<PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
 
