Revert "Removed and moved folder to create separation as much as possible from backend and ui"
This reverts commit 23080d4c093869d26d11aba4fb689b12dd3c2db5.

--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -4,8 +4,8 @@
 @using Booking.Api.Repositories
 @using Booking.Api.Repositories.Interfaces
 @using Microsoft.AspNetCore.Components.Forms
-@using Request.HTTP.DTO.MovieTheatreDTO
-@using Request.HTTP
+@using Booking.View.Request
+@using Booking.View.DTO.MovieTheatreDTO
 @inject BookerRequest BookerRequest
 @inject ILogger<BookerDTO> Logger
 
