--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -4,8 +4,8 @@
 @using Booking.Api.Repositories
 @using Booking.Api.Repositories.Interfaces
 @using Microsoft.AspNetCore.Components.Forms
-@using Booking.View.Request
-@using Booking.View.DTO.MovieTheatreDTO
+@using Request.Http.DTO.MovieTheatreDTO
+@using Request.Http
 @inject BookerRequest BookerRequest
 @inject ILogger<BookerDTO> Logger
 
