--- a/Booking.View/Components/BookingReceipt.razor
+++ b/Booking.View/Components/BookingReceipt.razor
@@ -1,4 +1,4 @@
-﻿@using Request.Http.DTO.MovieTheatreDTO
+﻿@using Request.HTTP.DTO.MovieTheatreDTO
 
 <div class="receipt-container" style="width: 100%; border: 2px solid #000000; border-radius: 8px; padding: 5px;">
     <h3>Booking Receipt</h3>
