--- a/Booking.View/Components/_Imports.razor
+++ b/Booking.View/Components/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Request.Http
+@using Request.HTTP
 @using Booking.Web.Components
 
