--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -155,7 +155,7 @@
     {
         try
         {
-            var postForm = await BookerService.RequestBooking(booker);
+            var postForm = await BookerService.PostBooking(booker);
             if (postForm)
             {
              
