--- a/BookerPortal.Web/Components/ReUseUI/EditItem.razor
+++ b/BookerPortal.Web/Components/ReUseUI/EditItem.razor
@@ -6,17 +6,11 @@
 @inject IBookerService BookerService
 
 <td>
-    <button @onclick="() => EditBooker(bookerDTO.Id)">
+    <button @onclick="() => EditBooker()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
             <path d="M12.354 1.646a.5.5 0 0 1 0 .708l-9 9a.5.5 0 0 1-.708-.708l9-9a.5.5 0 0 1 .708 0zm-1.708.708L3 11.5v1.5a.5.5 0 0 0 .5.5H5l9.146-9.146-1.5-1.5z" />
         </svg>
     </button>
-    <button class="btn btn-danger" @onclick="RemoveBooker">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
-        </svg>
-    </button>
-
 </td>
 
 @code {
@@ -26,23 +20,18 @@
     public EventCallback<int> OnRemove { get; set; }
 
 
-    private async Task RemoveBooker()
+
+    private async Task EditBooker()
     {
         try
         {
-            await BookerService.RemoveBookerById(bookerDTO.Id);
-            await OnRemove.InvokeAsync();
+            await BookerService.EditBookerById(bookerDTO);
 
         }
         catch (Exception ex)
         {
-           
             Console.WriteLine($"Error: {ex.Message}");
-        }
-    }
 
-    private void EditBooker(int id)
-    {
-     
+        }
     }
 }
